--- a/views/_layouts/countries.ejs
+++ b/views/_layouts/countries.ejs
@@ -1,4 +1,4 @@
-<select name="country" class="form-control js-select selectpicker dropdown-select" required="" data-msg="Please select country." data-error-class="u-has-error" data-success-class="u-has-success"
+<select name="country" class="form-control js-select dropdown-select" required="" data-msg="Please select country." data-error-class="u-has-error" data-success-class="u-has-success"
         data-live-search="true"
         data-style="form-control font-size-16 border-width-2 border-gray font-weight-normal">
     <option value="">Select country</option>
