--- a/views/edit-user-profile.ejs
+++ b/views/edit-user-profile.ejs
@@ -92,6 +92,7 @@
                             </div>
                         </div>
                         <% } %>
+                        <% if(typeof session != 'undefined' && session.role != "admin") { %>
                         <div class="w-100"></div>
                         <div class="d-flex justify-content-between mb-1">
                             <div class="custom-control custom-switch mb-4">
@@ -100,6 +101,16 @@
                                 <label class="custom-control-label" for="HaveProperty">Owner</label>
                             </div>
                         </div>
+                        <% } else { %>
+                            <div class="w-100"></div>
+                            <div class="d-flex justify-content-between mb-1">
+                                <div class="custom-control custom-switch mb-4">
+                                    <input type="checkbox"
+                                           class="custom-control-input" id="HaveProperty" name="role" value="owner">
+                                    <label class="custom-control-label" for="HaveProperty">Owner</label>
+                                </div>
+                            </div>
+                        <% } %>    
                         <% if(action === "edit") { %>
                         <input type="hidden" name="userid" value="<%= user._id %>">
                         <% } %>
