--- a/views/BookedPropertyDetails.ejs
+++ b/views/BookedPropertyDetails.ejs
@@ -60,12 +60,7 @@
             <div class="border-bottom mb-7">
                 <div class="container">
                     <nav class="py-3" aria-label="breadcrumb">
-                        <ol class="breadcrumb breadcrumb-no-gutter mb-0 flex-nowrap flex-xl-wrap overflow-auto overflow-xl-visble">
-                            <li class="breadcrumb-item flex-shrink-0 flex-xl-shrink-1"><a href="#">Home</a></li>
-                            <li class="breadcrumb-item flex-shrink-0 flex-xl-shrink-1"><a href="#">Hotels</a></li>
-                            <li class="breadcrumb-item flex-shrink-0 flex-xl-shrink-1"><a href="#">London Hotels</a></li>
-                            <li class="breadcrumb-item flex-shrink-0 flex-xl-shrink-1 active" aria-current="page">Park Avenue Baker Street London</li>
-                        </ol>
+                      <br>
                     </nav>
                 </div>
             </div>
@@ -85,13 +80,13 @@
                                     <a href="#" class="ml-1 d-block d-md-inline"> - View on map</a>
                                 </div>
                             </div>
-                            <ul class="list-group list-group-borderless list-group-horizontal custom-social-share">
-                                <li class="list-group-item px-1">
-                                    <a href="#" class="height-45 width-45 border rounded border-width-2 flex-content-center">
-                                        <i class="flaticon-share font-size-18 text-dark"></i>
+                           
+                                
+                                    <a href="javascript:history.go(-1);">
+                                      Backto Reservation 
                                     </a>
-                                </li>
-                            </ul>
+                                
+                          
                         </div>
                         <div class="py-4 border-top mb-4">
                             <ul class="mb-4 list-group list-group-borderless list-group-horizontal flex-center-between text-center flex-wrap">
